[gd_scene load_steps=6 format=3 uid="uid://b0hxic4qnhr6h"]

[ext_resource type="Script" uid="uid://djkkxfelcpce3" path="res://scripts/tower.gd" id="1_3bstr"]
[ext_resource type="Resource" uid="uid://bgvrdg5lg50bk" path="res://resources/twin_turret.tres" id="2_lkckd"]
[ext_resource type="Texture2D" uid="uid://b62tn3wdlxsc1" path="res://sprite/Gemini_Generated_Image_5919uv5919uv5919-removebg-preview.png" id="2_sjy2x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_feb5d"]
radius = 172.69

[sub_resource type="CircleShape2D" id="CircleShape2D_fc0e3"]
radius = 652.086

[node name="Tower" type="Node2D"]
scale = Vector2(0.412112, 0.463584)
script = ExtResource("1_3bstr")
stats = ExtResource("2_lkckd")

[node name="placement_area" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="placement_area"]
shape = SubResource("CircleShape2D_feb5d")

[node name="range_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range_area"]
shape = SubResource("CircleShape2D_fc0e3")

[node name="Tower Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_sjy2x")

[connection signal="area_entered" from="placement_area" to="." method="_on_placement_area_area_entered"]
[connection signal="area_exited" from="placement_area" to="." method="_on_placement_area_area_exited"]
[connection signal="input_event" from="placement_area" to="." method="_on_placement_area_input_event"]
[connection signal="area_entered" from="range_area" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="range_area" to="." method="_on_range_area_area_exited"]
